--- a/project.private.config.json
+++ b/project.private.config.json
@@ -1,6 +1,6 @@
 {
   "description": "项目私有配置文件。此文件中的内容将覆盖 project.config.json 中的相同字段。项目的改动优先同步到此文件中。详见文档：https://developers.weixin.qq.com/miniprogram/dev/devtools/projectconfig.html",
-  "projectname": "threejs-example-for-miniprogram-master",
+  "projectname": "threejs-miniprogram",
   "setting": {
     "compileHotReLoad": true
   },
@@ -38,6 +38,13 @@
         {
           "name": "threedemo",
           "pathName": "pages/threejs-demo/index",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
+        },
+        {
+          "name": "gltf",
+          "pathName": "pages/gltf/index",
           "query": "",
           "launchMode": "default",
           "scene": null
